--- a/Proyecto NFL - copia/GREEN BAY packers.html
+++ b/Proyecto NFL - copia/GREEN BAY packers.html
@@ -196,6 +196,29 @@
 	</table>	
   </div>
 
+  <main class="container">
+	<div class="row">
+		<div class="col-12 col-sm-6 col-md-3">
+			  <h3>Servicio 1</h3>
+			  <p>Texto del primer boton <div class="30">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, sequi voluptatibus aliquam voluptates, nobis sapiente delectus necessitatibus veritatis est quaerat totam dolorem obcaecati. Laborum facilis quas architecto nesciunt corrupti voluptatem!</div></p>
+			  <a href="#"class="btn btn-outline-info" >Leer más</a>
+				
+		</div>
+		<div class=" col-12  col-sm-6 col-md-3 mb-4">
+			  <h3>Servicio 2</h3>
+			  <p>Nam vitae cursus massa. Nunc ut arcu a mi convallis feugiat. Sed ante sem, sollicitudin sed porta et, molestie in turpis. Nulla lacinia lacus nec ligula feugiat eget sagittis metus lobortis.</p>
+			  <a href="#" class="btn btn-outline-primary btn-block btn-oswal" >Leer más</a>
+		</div>
+		<div class=" col-12 col-sm-6 col-md-3 mb-4">
+			  <h3>Servicio 3</h3>
+			  <p>Nam vitae cursus massa. Nunc ut arcu a mi convallis feugiat. Sed ante sem, sollicitudin sed porta et, molestie in turpis. Nulla lacinia lacus nec ligula feugiat eget sagittis metus lobortis.</p>
+			  <a href="#" class="btn btn-outline-dark btn-oswal" >Leer más</a>
+		</div>
+		<div class="col-12 col-sm-6 col-md-3 mb-4">
+			  <h3>Servicio 4</h3>
+			  <p>Nam vitae cursus massa. Nunc ut arcu a mi convallis feugiat. Sed ante sem, sollicitudin sed porta et, molestie in turpis. Nulla lacinia lacus nec ligula feugiat eget sagittis metus lobortis.</p>
+			  <a href="#" class="btn btn-outline-warning btn-oswal" >Leer más</a>
+		</div>
   
    
 
